Add vim dotfiles

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".zplug"]
 	path = .zplug
 	url = https://github.com/zplug/zplug
+[submodule ".vim/bundle/repos/github.com/Shougo/dein.vim"]
+	path = .vim/bundle/repos/github.com/Shougo/dein.vim
+	url = https://github.com/Shougo/dein.vim
