TabNine python semantic completion

--- a/.config/TabNine/TabNine.toml
+++ b/.config/TabNine/TabNine.toml
@@ -18,7 +18,7 @@ install = [["npm", "install", "-g", "ocaml-language-server"]]
 
 [language.python]
 command = "pyls"
-install = [["pip", "install", "python-language-server"]]
+synchronous_triggers = ["."]
 
 [language.cpp]
 command = "cquery"
