--- a/.config/nix/nix.conf
+++ b/.config/nix/nix.conf
@@ -1,8 +1,8 @@
-auto-optimise-store = true
+auto-optimise-store = false
 cores = 0
 keep-build-log = true
 keep-derivations = false
 max-jobs = auto
-sandbox = true
+sandbox = false
 substituters = https://cache.nixos.org https://allvm.cachix.org
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= allvm.cachix.org-1:nz7VuSMfFJDKuOc1LEwUguAqS07FOJHY6M45umrtZdk=
