--- a/.config/nix/nix.conf
+++ b/.config/nix/nix.conf
@@ -4,5 +4,5 @@ keep-build-log = true
 keep-derivations = false
 max-jobs = auto
 sandbox = false
-substituters = https://cache.nixos.org https://allvm.cachix.org
-trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= allvm.cachix.org-1:nz7VuSMfFJDKuOc1LEwUguAqS07FOJHY6M45umrtZdk=
+substituters = https://cache.nixos.org https://allvm.cachix.org https://nixcache.reflex-frp.org
+trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= allvm.cachix.org-1:nz7VuSMfFJDKuOc1LEwUguAqS07FOJHY6M45umrtZdk= ryantrinkle.com-1:JJiAKaRv9mWgpVAz8dwewnZe0AzzEAzPkagE9SP5NWI=
