--- a/.config/TabNine/tabnine_config.json
+++ b/.config/TabNine/tabnine_config.json
@@ -1,1 +1,1 @@
-{"version":"1.0.10","hide_promotional_message":true,"beta_enabled":"No","ignore_all_lsp":false,"semantic_status":{"unknown":"Enabled","python":"Enabled"},"disable_auto_update":true}
+{"version":"1.0.10","hide_promotional_message":true,"beta_enabled":"No","ignore_all_lsp":false,"semantic_status":{"unknown":"Enabled","python":"Enabled","cpp":"Enabled"},"disable_auto_update":true}
