--- a/.config/sway/config
+++ b/.config/sway/config
@@ -19,7 +19,8 @@ set $right l
 set $term alacritty
 # Your preferred application launcher
 # Note: it's recommended that you pass the final command to sway
-set $menu dmenu_path | dmenu | xargs swaymsg exec --
+set $menu alacritty --class 'launcher' --command bash -c 'compgen -c | grep -v "\." | sort -u | fzf --no-extended --print-query | xargs -r swaymsg -t command exec'
+for_window [app_id="^launcher$"] floating enable, border none, resize set width 25 ppt height 100 ppt, move position 0 px 0 px
 
 ### Output configuration
 #
