--- a/.config/sway/config
+++ b/.config/sway/config
@@ -4,7 +4,7 @@
 #
 # Read `man 5 sway` for a complete reference.
 
-font Iosevka Medium 12
+font Iosevka Medium 10
 
 ### Variables
 #
@@ -19,7 +19,7 @@ set $right l
 set $term alacritty
 # Your preferred application launcher
 # Note: it's recommended that you pass the final command to sway
-set $menu alacritty --class 'launcher' --command bash -c 'compgen -c | grep -v "\." | sort -u | fzf --no-extended --print-query | xargs -r swaymsg -t command exec'
+set $menu alacritty --class 'launcher' --command bash -c 'compgen -c | grep -v "\." | sort -u | fzf | xargs -r swaymsg -t command exec'
 for_window [app_id="^launcher$"] floating enable, border none, resize set width 25 ppt height 100 ppt, move position 0 px 0 px
 
 ### Output configuration
@@ -37,12 +37,12 @@ for_window [app_id="^launcher$"] floating enable, border none, resize set width 
 #
 # Example configuration:
 #
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' \
-#               resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
+#    exec swayidle -w \
+#             timeout 300 'swaylock -f -c 000000' \
+#             timeout 600 'swaymsg "output * dpms off"' \
+#                  resume 'swaymsg "output * dpms on"' \
+#             before-sleep 'swaylock -f -c 000000'
+
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
@@ -51,12 +51,15 @@ for_window [app_id="^launcher$"] floating enable, border none, resize set width 
 #
 # Example configuration:
 #
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
+input "0:0:Cypress_APA_Trackpad_(cyapa)" {
+    dwt enabled
+    natural_scroll enabled
+}
+
+input "1:1:AT_Translated_Set_2_keyboard" {
+    xkb_layout "us,ara,il"
+}
+
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -138,6 +141,12 @@ for_window [app_id="^launcher$"] floating enable, border none, resize set width 
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
+# Keyboard layouts:
+#
+   bindsym $mod+space exec swaymsg input "1:1:AT_Translated_Set_2_keyboard" xkb_switch_layout 0
+   bindsym $mod+e exec swaymsg input "1:1:AT_Translated_Set_2_keyboard" xkb_switch_layout 1
+   bindsym $mod+i exec swaymsg input "1:1:AT_Translated_Set_2_keyboard" xkb_switch_layout 2
+#
 # Layout stuff:
 #
     # You can "split" the current object of your focus with
@@ -149,7 +158,7 @@ for_window [app_id="^launcher$"] floating enable, border none, resize set width 
     # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
     bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
+    bindsym $mod+Shift+Backslash layout toggle split
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
@@ -158,7 +167,7 @@ for_window [app_id="^launcher$"] floating enable, border none, resize set width 
     bindsym $mod+Shift+space floating toggle
 
     # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
+    # bindsym $mod+space focus mode_toggle
 
     # Move focus to the parent container
     bindsym $mod+a focus parent
@@ -204,18 +213,18 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-    #position top
+    position top
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    # status_command while date +'%Y-%m-%d %H:%M:%S %p'; do sleep 1; done
-    swaybar_command waybar
+    status_command while ~/.config/sway/sway_bar.sh; do sleep 1; done
+    # swaybar_command waybar
 
-    # font Iosevka Normal 10
+    font Iosevka Normal 10
 
-    # colors {
-    #     statusline #ffffff
-    #     background #323232
-    #     inactive_workspace #32323200 #32323200 #5c5c5c
-    # }
+    colors {
+        statusline #ffffff
+        background #323232
+        inactive_workspace #32323200 #32323200 #5c5c5c
+    }
 }
